--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=node",
+    "test": "react-scripts test",
+    "test_firestore": "react-scripts test --env=node",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
