--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -27,8 +27,10 @@ jobs:
           npm install -g firebase-tools
           firebase emulators:exec --only forestore --project my-project-id 'npm run test_firestore db.test.ts'
 
-      - name: Build Preview
+      - name: Build Project
         run: npm ci && npm run build
+
+      - name: Delopy to Preview Server
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
