--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -22,14 +22,19 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v2
 
-      - name: Run Firestore Unit Tests
-        run: |
-          npm install -g firebase-tools
-          firebase emulators:exec --only forestore 'npm run test_firestore db.test.ts'
+      - name: Setup Node
+        uses: actions/setup-node@v1
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_BOON_COMPANION }}'
-          projectId: test-boon-companion
+          node-version: "16"
+        
+      - name: Install Firebase Emulator Suite
+        run: npm install -g firebase-tools
+
+      - name: install dependencies
+        run: npm install
+
+      - name: Run Firestore Unit Tests
+        run: firebase emulators:exec --only forestore --project boon-companion 'npm run test_firestore db.test.ts'
 
       - name: Build Project
         run: npm ci && npm run build
