--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -22,19 +22,12 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v2
 
-      - name: Setup Node
-        uses: actions/setup-node@v1
-        with:
-          node-version: "16"
-        
-      - name: Install Firebase Emulator Suite
-        run: npm install -g firebase-tools
-
-      - name: install dependencies
-        run: npm install
-
       - name: Run Firestore Unit Tests
-        run: firebase emulators:exec --only forestore --project boon-companion 'npm run test_firestore db.test.ts'
+        uses: w9jds/firebase-action@master
+        with:
+          args: firebase emulators:exec --only forestore --project boon-companion 'npm run test_firestore db.test.ts'
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_BOON_COMPANION }}
 
       - name: Build Project
         run: npm ci && npm run build
