--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Run Firestore Unit Tests
         uses: w9jds/firebase-action@master
         with:
-          args: firebase emulators:exec --only forestore --project boon-companion 'npm run test_firestore db.test.ts'
+          args: emulators:exec --only forestore --project boon-companion 'npm run test_firestore db.test.ts'
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_BOON_COMPANION }}
 
