--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -22,10 +22,18 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v2
 
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '16'
+
+      - name: Install Dependencies
+        run: npm install && npm ci
+
       - name: Run Firestore Unit Tests
         uses: w9jds/firebase-action@master
         with:
-          args: emulators:exec --only forestore --project test-boon-companion 'npm run test_firestore db.test.ts'
+          args: emulators:exec --only forestore --project boon-companion 'npm run test_firestore db.test.ts'
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_BOON_COMPANION }}
 
