[feature/unit_test] checking whether firestore auth error fixed

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -27,13 +27,14 @@ jobs:
         with:
           node-version: '16'
 
-      - name: Install Dependencies
-        run: npm install && npm ci
+      # - name: Install Dependencies
+      #   run: npm install && npm ci
 
       - name: Run Firestore Unit Tests
         uses: w9jds/firebase-action@master
         with:
-          args: emulators:exec --only forestore --project boon-companion 'npm run test_firestore db.test.ts'
+          args: emulators:exec --only forestore --project boon-companion 'npm run test'
+          # args: emulators:exec --only forestore --project boon-companion 'npm run test_firestore db.test.ts'
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_BOON_COMPANION }}
 
