--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Firebase Emulator Suite
-        run: npm install -g firease-tools
+        run: npm install -g firebase-tools
 
       - name: Install dependencies
         run: npm install
