--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -22,16 +22,11 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v2
 
-      - name: Install Firebase Emulator Suite
-        run: npm install -g firebase-tools
-
       - name: Install dependencies
         run: npm install
 
       - name: Run Firestore Unit Tests
-        run: firebase emulators:exec --only forestore --project boon-companion 'npm run test_firestore db.test.ts'
-        env:
-          GCLOUD_PROJECT: boon-companion
+        run: npm test
 
       - name: Build Project
         run: npm ci && npm run build
