[feature/unit_test] delete firestore emulator test cases

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -22,14 +22,11 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run Firestore Unit Tests
-        run: npm test
-
       - name: Build Project
         run: npm ci && npm run build
+
+      - name: Run React Unit Tests
+        run: npm test
 
       - name: Delopy to Preview Server
         uses: FirebaseExtended/action-hosting-deploy@v0
