--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm ci && npm run build
 
       - name: Run React Unit Tests
-        run: npm test
+        run: npm test --detectOpenHandles
 
       - name: Delopy to Preview Server
         uses: FirebaseExtended/action-hosting-deploy@v0
